# ThreadSanitizer-mirror

./: .gitignore  README.txt  commit_all.sh  common.mk  install_tsan.sh
benchmarks/apache/: build.sh  get.sh  run.sh  tsan_apache.supp
bfd_symbolizer/: Makefile  bfd_symbolizer.c  bfd_symbolizer.h  build.sh  test.cc  test_dyn.cc  test_dyn2.cc  test_so.cc
buildbot/: Makefile  buildbot.tac  builder_experimental.py  builder_jtsan.py  builder_jtsan_red.py  builder_linux.py  builder_linux_build.py  builder_linux_pin.py  builder_linux_small.py  builder_mac.py  builder_valgrind.py  builder_windows.py  builder_windows_build.py  builder_wine.py  chromium_utils.py  common.py  master.cfg  process_log.py  run_master.py
buildbot/orb/: orb.py
buildbot/public_html/: buildbot.css
cpp_vg/: Makefile.am  Makefile.core.am  Makefile.flags.am  Makefile.tool-flags.am  configure.in
cpp_vg/coregrind/: Makefile.am  m_cplusplus_support.cc  m_libcbase.c
cpp_vg/cppgrind/: Makefile.am  cp_main.cc
cpp_vg/include/: pub_tool_cplusplus.h  pub_tool_libcassert.h  pub_tool_tooliface.h
ctest/: build  debug  driver.cc  frontend.h  gcc_frontend.cc  test_source.cc
dynamic_annotations/: dynamic_annotations.c  dynamic_annotations.cc  dynamic_annotations.h
earthquake/: build.sh  earthquake.c  earthquake_core.c  earthquake_core.h  earthquake_wrap.c  earthquake_wrap.h
gcc/include/: relite_rt.h
gcc/plg/: .cproject  .project  Makefile  chrome_tsan_wrap.h  gcctsan.c  relite.c  relite_ignore.cc  relite_ignore.h  relite_instrument.c  relite_pass.c  relite_pass.h  relite_rt.h  relite_rt_atomic.h  std_atomic_wrap.hpp  tree-tsan.c  tree-tsan.h  tsan.c
gcc/rt/: .cproject  .project  gcctsan_atomic.h  gcctsan_rt.c  gcctsan_rt.h  relite_atomic.h  relite_dbg.c  relite_dbg.h  relite_defs.h  relite_hook.c  relite_hook.h  relite_pthread.c  relite_pthread.h  relite_report.c  relite_report.h  relite_rt.c  relite_rt.h  relite_rt_int.h  relite_stdlib.c  relite_stdlib.h  relite_thr.c  relite_thr.h
gcc/scripts/: cc.sh  g++  gcc  ld  update_chromium
gcc/utest/: .cproject  .project  build.sh  main.cc
gdb_symbols/: Makefile  main.cc  symbol_table.cc  symbol_table.h
go/: Makefile  go_rtl.cc
go_tests/: Makefile  go.ignore  go_norace_1.go  go_norace_2.go  go_race_1.go  go_race_2.go
helgrind/: Makefile.am  README.txt  helgrind.h  hg_annotations.c  hg_intercepts.c  hg_internal.h  hg_main.c  hg_wordfm.c  hg_wordfm.h  hg_wordset.c  hg_wordset.h  valgring_XArray.patch
hg-memstat/: helgrind.h  hg_annotations.c  hg_debugonly.h  hg_main.c  hg_wordset.c  hg_wordset.h
jtsan/: Makefile  RaceDetectorApi.java  ThreadSanitizerTest.java  jtsan.sh  run_all_tests.sh  summarize.py
llvm/: Makefile
llvm/opt/: README
llvm/scripts/: ar  ar.sh  common.py  common.sh  g++  g++.sh  gcc  gcc.sh  gcc_common.sh  instrument_and_link.sh  ld.sh  link_config.sh  link_config.txt  link_debuginfo.sh
llvm/tsan_rtl/: Makefile  stack_info.cc  stack_info.h  thread_sanitizer.h  ts_event_names.h  ts_events.h  ts_replace.h  ts_trace_info.h  ts_util.cc  tsan_rtl.cc  tsan_rtl.h  tsan_rtl_atomic.cc  tsan_rtl_dynamic_annotations.cc  tsan_rtl_lbfd.cc  tsan_rtl_lbfd.h  tsan_rtl_sched_shake.cc  tsan_rtl_sched_shake.h  tsan_rtl_wrap.h
msm/: Makefile  barrier1.dot  barrier2.dot  barrier3.dot  exa1.dot  exa2.dot  exa3.dot  exa4.dot  exa5.dot  helgrind330.dot  helgrind340.dot  legend_r.dot  legend_w.dot  legend_wr.dot  prop1.dot  prop2.dot  prop2_simp.dot  purehb1.dot  purehb2.dot  qivdot.sh  simple_hb.dot  sync_exa.dot
patches/: 080302.patch  080304.patch  080307.patch  080314.patch  080320.patch  080526.patch  080811.patch  240408.patch  250408.patch  cxx_demo.patch
pin_vs_vg/: download_all.sh  run_under_both_tools.sh  valgrind.patch
pin_vs_vg/valgrind_tool/: Makefile.am  tg_main.c
race_checker/: race_checker.cc  race_checker.h  race_checker_unittest.cc  symbolize.py
tsan/: Makefile  Makefile.am  common_util.cc  common_util.h  darwin9-tsan.supp  get_and_build_tsan.sh  ignore.cc  ignore.h  mk-self-contained-valgrind.sh  stlport  stringmatch.cc  stringmatch.h  suppressions.cc  suppressions.h  suppressions_test.cc  thread_sanitizer.cc  thread_sanitizer.h  thread_sanitizer_test.cc  ts_atomic.cc  ts_atomic.h  ts_atomic_int.h  ts_dynamorio.cc  ts_events.h  ts_heap_info.h  ts_literace.h  ts_lock.h  ts_makefile  ts_offline.cc  ts_pin.cc  ts_race_verifier.cc  ts_race_verifier.h  ts_replace.h  ts_setup.h  ts_simple_cache.h  ts_stats.h  ts_trace_info.h  ts_util.cc  ts_util.h  ts_valgrind.cc  ts_valgrind.h  (+12 more)
tsan/offline_tests/: simple_race_1.tst
tsan/pin/: Makefile  pin_tsan.sh  ts_pin.cc
tsan/stlport/stl/: ._algobase.h.swp  _algobase.h  _alloc.h  _new.h  _range_errors.c  char_traits.h
tsan/stlport/stl/config/: .user_config.h.swp  user_config.h
tsan_binary/: mk-self-contained-tsan-pin.sh  mk-self-contained-tsan.sh  mk-self-contained-valgrind.sh
tsan_rtl/: Makefile  fake_annotations.h  tsan_rtl.cc  tsan_rtl.h  tsan_rtl_dynamic_annotations.cc  tsan_rtl_symbolize.h  tsan_rtl_symbolize_bfd.cc  tsan_rtl_symbolize_llvm.cc  tsan_rtl_wrap.cc  tsan_rtl_wrap.h
unittest/: Makefile  atomicity_tests.cc  bigtest.cc  deadlock_unittest.cc  demo_tests.cc  demo_tests.tmpl  dynamic_annotations.cc  dynamic_annotations.h  helgrind.supp  linear_solver.h  mac_tests.mm  match_output.py  memory_unittest.cc  old_test_suite.cc  old_test_suite.h  opt_tests.cc  output_test1.cc  output_test1.tmpl  posix_tests.cc  racecheck_unittest.cc  racecheck_unittest.ignore  racecheck_unittest.supp  run_output_tests.sh  test_all.sh  test_utils.cc  test_utils.h  thread_wrappers.h  thread_wrappers_pthread.h  thread_wrappers_win.h  windows_tests.cc  wine.supp
v2/: Makefile  Makefile.inc  analyze_libtsan.sh  check_analyze.sh  presubmit  tsan_interceptors.cc  tsan_interceptors.h  tsan_interface.h  tsan_linux.cc  tsan_linux.h  tsan_rtl.cc  tsan_rtl.h
valgrind_patches/: check_for_static_binary.patch  coregrind__m_main.c.patch  guest_amd64_toIR.patch  limits.patch  nacl.patch  pdbreader.patch  set_n_errs.patch  trace_children_skip.patch  vki_warning.patch  workq.patch
wine/: wine.patch
(+161 files in other folders)
